--- a/q10/q10/css/style.css
+++ b/q10/q10/css/style.css
@@ -1,1 +1,94 @@
 @charset "UTF-8";
+.btn{
+  border-radius: 10px;
+  line-height: 50px;
+  margin-left: 30px;
+  padding: 0 15px;
+  cursor: pointer;
+}
+.button-area{
+  display: flex;
+  justify-content: center;
+}
+/* Q10-1 */
+.red-button{
+  color: #fff;
+  background: #fd0f0fd9;
+}
+.blue-button{
+  color: #fff;
+  background: #170ffdd9;
+}
+.green-button{
+  color: #000;
+  background: #0ffd0fd9;
+}
+/* Q10-2 */
+.red-button-s{
+  color: #fff;
+  background: #fd0f0fd9;
+  box-shadow: 0 5px 0 0 rgba(63, 5, 5, 0.851);
+}
+.blue-button-s{
+  color: #fff;
+  background: #170ffdd9;
+  box-shadow: 0 5px 0 0 rgba(5, 13, 63, 0.851);
+}
+.green-button-s{
+  color: #000;
+  background: #0ffd0fd9;
+  box-shadow: 0 5px 0 0 rgba(5, 63, 5, 0.851);
+}
+/* Q10-3 */
+.red-button-p{
+  color: #fff;
+  background: #fd0f0fd9;
+  box-shadow: 0 5px 0 0 rgba(63, 5, 5, 0.851);
+}
+.red-button-p:active,.blue-button-p:active,.green-button-p:active{
+  top: 3px;
+  box-shadow: none;
+  transform: translateY(2px);
+}
+.blue-button-p{
+  color: #fff;
+  background: #170ffdd9;
+  box-shadow: 0 5px 0 0 rgba(5, 13, 63, 0.851);
+}
+.green-button-p{
+  color: #000;
+  background: #0ffd0fd9;
+  box-shadow: 0 5px 0 0 rgba(5, 63, 5, 0.851);
+}
+/* Q10-4 */
+.btn-button{
+  border-radius: 10px;
+  line-height: 50px;
+  margin-left: 30px;
+  padding: 0 15px;
+  cursor: pointer;
+}
+.double{
+  border: 4px double #67c5ff;
+  color: #67c5ff;
+}
+.double:hover{
+  background: #fffbef;
+}
+.dotted{
+  border: 4px dotted #75caff;
+  color: #67c5ff;
+}
+.dotted:hover{
+  border: 4px dashed #75caff;
+}
+.dashed{
+  border: 4px dashed #67c5ff;
+  color: #0079a5f8;
+  background: #d0edfff8;
+}
+.dashed:hover{
+  color: #67c5ff;
+  background: #ffff;
+  transition: 3s;
+}
