--- a/q6/q6/css/style.css
+++ b/q6/q6/css/style.css
@@ -1,1 +1,34 @@
 @charset "UTF-8";
+#header{
+  width: 100%;
+  background: #388bff;
+  position: fixed;
+}
+.header-area{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 1100px;
+}
+.logo-area{
+  margin-top: 30px;
+}
+.logo-area a{
+  font-size: 24px;
+  font-weight: bold;
+  color: #f2ff7b;
+}
+a{
+  text-decoration: none;
+}
+ul{
+  display: flex;
+  justify-content: space-between;
+}
+nav li{
+  list-style: none;
+  padding: 30px;
+}
+li a{
+  color: #ffff;
+}
