--- a/q7/q7/css/style.css
+++ b/q7/q7/css/style.css
@@ -1,1 +1,30 @@
 @charset "UTF-8";
+.content{
+  position: relative;
+  padding: 20px;
+  background: #fad296;
+  border: solid 5px #8f5a0a;
+  border-radius: 30px;
+  width: 500px;
+  margin: 0 auto;
+  line-height: 16px;
+  font-size: 16px;
+
+}
+.content:before {
+  position: absolute;
+  content: "";
+  top: 100%;
+  left: 36px;
+  border: 8px solid transparent;
+  border-top: 8px solid  #fad296;
+  z-index: 2;
+}
+.content:after {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 30px;
+  border: 14px solid transparent;
+  border-top: 14px solid  #8f5a0a;
+}
