--- a/q9/q9/css/style.css
+++ b/q9/q9/css/style.css
@@ -1,4 +1,142 @@
 @charset "UTF-8";
+/* Q9-1*/
+.green{
+  width: 200px;
+  height: 200px;
+  background: #76ff826b;
+  margin: auto;
+}
+.fadeIn{
+  animation: fadeIn 4s ease-in-out  0s 1 normal;
+  }
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 4; }
+}
+/* Q9-2 */
+.fadeOut{
+  animation: fadeOut 4s ease 0s 1 normal;
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 4;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+/* Q9-3  */
+.rotation{
+  animation:4s linear infinite rotation1;
+}
+@keyframes rotation1 {
+  0%{ transform:rotate(0);}
+  100%{ transform:rotate(360deg); }
+}
+
+/* Q9-4 ~ Q9-11*/
+.blue{
+  width: 200px;
+  height: 200px;
+  background: #331aefd0;
+  margin: 0 auto;
+  transition: .5s;
+}
+/* Q9-4 */
+.hover{
+  transition: all 0.5s ease;
+}
+.hover:hover{
+  background: #ff27e2c9;
+}
+
+/* Q9-5 */
+/* .rotate{
+  transition: .5s;
+} */
+.rotate:hover{
+  transform: rotate(360deg);
+}
+
+/* Q9-6 */
+.up{
+  position: relative;
+  top: 0;
+} 
+.up:hover{
+  transform: translate(0,-20%);
+  /* transition: .5s; */
+}
+/* Q9-7 */
+.right:hover{
+  transform: translate(20%,0);
+  transition: .5s;
+}
+/* Q9-8 */
+.hight:hover{
+  height: 300px;
+  /* transition: .5s; */
+}
+/* Q9-9 */
+.width:hover{
+  width: 500px;
+  /* transition: .5s; */
+}
+/* Q9-10 */
+.border:hover{
+  box-sizing: border-box;
+  border: 10px #00ffe5 solid;
+}
+/* Q9-11 */
+.shadow:hover{
+  box-shadow: 8px 11px 10px 3px #06031ed0;
+}
+/* Q9-12 */
+.circle{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: solid 10px #ecf1f2;
+  border-top-color: #14ff4bcd;
+  margin: 0 auto;
+  animation:1.1s linear infinite circle;
+}
+@keyframes circle{
+  0%{ transform:rotate(0);}
+  100%{ transform:rotate(360deg); }
+}
+/* Q9-13 */
+.card-area{
+  display: flex;
+}
+.card-box:first-child{
+  border-left: 1px solid #000;;
+}
+.card-box{
+  width: 300px;
+  border: 1px solid #000;
+  padding: 20px;
+  background: #fff;
+  border-left: 0;
+}
+
+.image{
+  width: 150px;
+  height: 150px;
+  background: url(https://picsum.photos/id/1005/200/300);
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  margin: 0 auto;
+}
+.text{
+  margin-top: 20px;
+}
+.card-box:hover{
+  box-shadow: 0px 0px 10px 3px #424242d0;
+  z-index: 1;
+}
+
 
 /* カード内の画像は以下のURLを使用して下さい */
-/* https://picsum.photos/id/1005/200/300 */
